BUILD: Set jvm options in circleci, set target compile version